--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Font Awesome -->
     <link
-      href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
 
@@ -41,9 +41,9 @@
     <!-- Navigation -->
     <nav
       id="main-navbar"
-      class="navbar sticky-top navbar-expand-lg navbar-light"
+      class="navbar sticky-top navbar-expand-lg navbar-light navbar-hide"
     >
-      <a class="navbar-brand p-3" href="">ZM</a>
+      <a class="navbar-brand p-3" href="#">ZM</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -60,20 +60,24 @@
         id="navbarSupportedContent"
       >
         <ul class="navbar-nav ml-lg-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#hello">Hello</a>
+            <a class="nav-link" href="#about-me">about me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#blog">blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">let's chat!</a>
           </li>
         </ul>
       </div>
     </nav>
 
-    <!-- Page Content -->
-    <div class="container">
+    <!-- Home Container -->
+    <div class="container" id="home-container">
       <div class="row">
         <div id="main-intro" class="col-lg-12 text-center">
           <div class="text-right">
@@ -99,14 +103,56 @@
         </div>
       </div>
     </div>
-
-    <footer class="footer">
-      <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
+    <div class="container-fluid section-container yellow" id="about-me">
+      <div class="d-flex justify-content-center align-items-center">
+        <div>
+          https://medium.com/techtonica/apprentice-story-zhag-85d332acbc3
+        </div>
       </div>
-    </footer>
+    </div>
 
-    <!-- Optional JavaScript -->
+    <div style="height: 1000px;"></div>
+    <!-- Socials Footer -->
+    <div
+      class="d-flex container-fluid blue justify-content-between align-items-center"
+      id="socials"
+    >
+      <span style="opacity: 0">
+        Built from scratch, with love, by @zhagm
+      </span>
+      <span>
+        <ul id="sub-nav" class="nav justify-content-center">
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="https://twitter.com/zhag_m"
+              target="_blank"
+            >
+              <i class="fa fa-twitter"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="https://www.linkedin.com/in/zhag"
+              target="_blank"
+            >
+              <i class="fa fa-linkedin"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/zhagm" target="_blank">
+              <i class="fa fa-github"></i>
+            </a>
+          </li>
+        </ul>
+      </span>
+      <span id="credit">
+        Built from scratch, with love, by
+        <a href="https://github.com/zhagm" target="_blank">@zhagm</a>
+      </span>
+    </div>
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -123,5 +169,17 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <!-- Optional JavaScript -->
+    <script>
+      // toggles class from .navbar based on scroll unless passed a bool that tells it to trigger regardless
+      function navHideClassToggle(trigger) {
+        if ($(window).scrollTop() <= 500 || !trigger) {
+          $(".navbar").addClass("navbar-hide");
+        } else {
+          $(".navbar").removeClass("navbar-hide");
+        }
+      }
+      $(window).scroll(navHideClassToggle);
+    </script>
   </body>
 </html>
