Save work for the day, structure ready to be filled

--- a/index.html
+++ b/index.html
@@ -106,11 +106,10 @@
     <div class="container-fluid section-container yellow" id="about-me">
       <div class="d-flex justify-content-center align-items-center">
         <div>
-          https://medium.com/techtonica/apprentice-story-zhag-85d332acbc3
+          CENTERED
         </div>
       </div>
     </div>
-
     <div style="height: 1000px;"></div>
     <!-- Socials Footer -->
     <div
